# chicory

./: .chicoryignore  .dockerignore  .gitignore  CHANGELOG_v26.md  CHANGELOG_v28.md  CHANGELOG_v29.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
chicory/: __init__.py  config.py  exceptions.py
chicory/api/: __init__.py  app.py  sessions.py  user_db.py
chicory/bench/: __init__.py  chicory_retrieval.py  corpus_loader.py  utils.py
chicory/cli/: app.py  chat.py  commands.py  commons.py  conversation_log.py  display.py
chicory/commons/: __init__.py  signal_emitter.py
chicory/dashboard/: app.py  data.py
chicory/db/: engine.py  schema.py
chicory/diagnostics/: activation_trace.py  context_log.py
chicory/ingest/: chunker.py  code_summarizer.py  criticality.py  document_ingestor.py  ignore.py  ingestor.py  parsers.py  summarizer.py  watcher.py
chicory/layer1/: embedding_engine.py  glyph_analyzer.py  glyph_bridge.py  glyph_encoder.py  glyph_lexicon.py  memory_store.py  salience.py  tag_manager.py  vector_index.py
chicory/layer2/: retrieval_tracker.py  time_series.py  trend_engine.py
chicory/layer3/: centroid_subgraph.py  chain_anisotropy.py  cross_hidden_bridges.py  cross_project_alignment.py  cross_project_middle.py  directional_flow.py  phase_space.py  poincare.py  semiotic_graph.py  square_finder.py  square_visualizer.py  synchronicity_detector.py  synchronicity_engine.py  tag_space.py  tensor_cache.py  vertical_square_finder.py  zigzag_analyzer.py
chicory/layer4/: adaptive_thresholds.py  bridge_optimizer.py  canopy.py  cooccurrence_optimizer.py  directional_canopy.py  episodic_tensor.py  feedback.py  forest.py  meta_analyzer.py  temporal_episodes.py
chicory/llm/: __init__.py  base.py  client.py  factory.py  null_client.py  openai_client.py  prompts.py  types.py
chicory/mcp/: __init__.py  server.py
chicory/migration/: model_update.py
chicory/models/: canopy.py  episodic.py  forest.py  lattice.py  memory.py  meta_pattern.py  phase.py  retrieval.py  synchronicity.py  trend.py
chicory/orchestrator/: orchestrator.py  tool_definitions.py  tool_handlers.py
docs/: self_building_graph_canopy.md
examples/: ramsey_network_demo.py
scripts/: bootstrap_canopy.py
tests/: conftest.py  test_glyph_analyzer.py  test_ingestor.py
tests/test_integration/: test_full_cycle.py
tests/test_layer3/: test_centroid_subgraph.py  test_square_finder.py  test_synchronicity_engine.py  test_tag_relational_tensor.py
tests/test_layer4/: test_canopy.py
tests/test_llm/: test_factory.py  test_types.py
(+2 files in other folders)
