[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chicory"
version = "0.1.0"
description = "Dual-tracking memory architecture for LLMs"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "sentence-transformers>=3.0",
    "numpy>=1.24",
    "faiss-cpu>=1.7",
    "scipy>=1.11",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
dashboard = [
    "dash>=2.14",
    "plotly>=5.18",
    "networkx>=3.0",
]
mcp = [
    "mcp>=1.0",
]

[project.scripts]
chicory = "chicory.cli.app:app"
chicory-mcp = "chicory.mcp.server:main"

[tool.setuptools.packages.find]
include = ["chicory*"]
