[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chicory-man"
version = "0.2.0"
description = "Self-organizing memory system for LLMs with synchronicity detection and prime Ramsey lattice"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = ["llm", "memory", "mcp", "rag", "synchronicity", "ramsey", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "sentence-transformers>=3.0",
    "numpy>=1.24",
    "faiss-cpu>=1.7",
    "scipy>=1.11",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "watchdog>=4.0",
]

[project.urls]
Homepage = "https://github.com/DMNK154/chicory"
Repository = "https://github.com/DMNK154/chicory"
Issues = "https://github.com/DMNK154/chicory/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
dashboard = [
    "dash>=2.14",
    "plotly>=5.18",
    "networkx>=3.0",
]
mcp = [
    "mcp>=1.0",
]

[project.scripts]
chicory = "chicory.cli.app:app"
chicory-mcp = "chicory.mcp.server:main"

[tool.setuptools.packages.find]
include = ["chicory*"]
